--- a/index.html
+++ b/index.html
@@ -4,29 +4,32 @@ title: Home
 ---
 
 <!--- Jobs ALERT -->
-<div class="container-md py-3">
-  <div class="row">
-    <div class="col-12 mt-4">
-    <div class="alert alert-success text-center" role="alert">
-       The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</br> Take our six-minute survey and be among first research group visited by DataPLANT’s data stewards.
+<div class="container-md">
+  <div class="row justify-content-md-center bg-lightgray">
+    <div class="col-12 mt-4 p-4">
+    <div class="alert alert-success text-center text-white bg-mint" role="alert">
+       <h2>The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</h2> Take our six-minute survey and be among first research group visited by DataPLANT’s data stewards.
+    </br>
+       <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u" class="learn-more">go to survey</a>
       </div>
     </div>
   </div>
 </div>
 
 <!-- Title -->
-<div class="container-md pb-3">
-  <div class="row justify-content-center">
-    <div class="col-12 col-md-9 pb-5 pb-lg-0">
-      <img src="assets/img/nfdi-hero.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;"/>
+<div class="container-md pb-3 bg-lightgray">
+  <div class="row justify-content-center bg-lightgray">
+    <div class="col-12 col-md-9 pb-5 pb-lg-0 bg-lightgray">
+      <img src="assets/img/nfdi-hero_.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;"/>
     </div>
   </div>
 
   <div class="row justify-content-center">
-    <div class="col text-center">
+    <div class="col text-center text-darkblue pb-2">
       <h2><b>Democratization of plant research.</b></h2>
       <h2><b>Made easy.</b></h2>
-    </div>
+    </br>
+    <a href="https://swate.bio.uni-kl.de/register" class="learn-more">become a member</a>  
   </div>
 </div>
 
@@ -115,7 +118,8 @@ title: Home
             “we understand that annotating data and providing metadata takes precious and we are 
             in it together so let’s make this as easy as possible”.
           </p>
-          <a href="/services.html" class="learn-more">learn more</a>
+        </br>
+          <!-- <a href="/services.html" class="learn-more">learn more</a> -->
         </div>      
       </div>
     </div>
