--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <!--- Jobs ALERT -->
 <div class="container-md">
-  <div class="row justify-content-md-center bg-lightgray">
+  <div class="row justify-content-md-center bg-white">
     <div class="col-12 mt-4 p-4">
     <div class="alert alert-success text-center text-white bg-mint" role="alert">
        <h2>The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</h2> Take our six-minute survey and be among first research group visited by DataPLANT’s data stewards.
@@ -17,9 +17,9 @@ title: Home
 </div>
 
 <!-- Title -->
-<div class="container-md pb-3 bg-lightgray">
-  <div class="row justify-content-center bg-lightgray">
-    <div class="col-12 col-md-9 pb-5 pb-lg-0 bg-lightgray">
+<div class="container-md pb-3 bg-white">
+  <div class="row justify-content-center bg-white">
+    <div class="col-12 col-md-9 pb-5 pb-lg-0 bg-white">
       <img src="assets/img/nfdi-hero_.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;"/>
     </div>
   </div>
@@ -29,7 +29,7 @@ title: Home
       <h2><b>Democratization of plant research.</b></h2>
       <h2><b>Made easy.</b></h2>
     </br>
-    <a href="https://swate.bio.uni-kl.de/register" class="learn-more">become a member</a>  
+    <!-- <a href="https://swate.bio.uni-kl.de/register" class="learn-more">become a member</a>   -->
   </div>
 </div>
 
