disable ARC button on front page

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ title: Home
             research context. This includes not only the measurement data, but also (meta)data annotations, 
             tools, and scripts. This will allow reproducibility plus to forward “raw data” and metadata 
             slices to public repositories (e.g. EBI NCBI etc.)</p>
-          <a href="/arcs.html" class="learn-more">learn more</a>
+          <!-- <a href="/arcs.html" class="learn-more">learn more</a> -->
         </div>      
       </div>
      </div>
