Pull index card headers out of the bg color

--- a/index.html
+++ b/index.html
@@ -35,8 +35,9 @@ title: Home
 
 <!-- Our Mission -->
 <div class="container-md">
-  <div class="row hero bg-mint">
+  <div class="row hero bg-split-top-mint">
     <div class="hero-image">
+      <div class="vertical-spacer"></div>
       <img src="assets/img/mission.svg" alt="mission statement"/>
     </div>
     <div class="hero-content">
@@ -50,14 +51,15 @@ title: Home
           <a href="/mission.html" class="learn-more">learn more</a>
         </div>      
       </div>
-    </div>
+      <div class="vertical-spacer"></div>
   </div>
 </div>
 
 <!-- Community -->
 <div class="container-md">
-  <div class="row hero bg-darkblue">
+  <div class="row hero bg-split-top-darkblue">
     <div class="hero-image order-1 order-md-2">
+      <div class="vertical-spacer"></div>
       <img src="assets/img/funding-map.svg" alt="plant biology funding map"/>
     </div>
     <div class="hero-content order-2 order-md-1">
@@ -72,16 +74,18 @@ title: Home
             or imaging and is ready to store petabaytes of annotated data.            
           </p>
           <a href="/community.html" class="learn-more">learn more</a>
-        </div>      
+        </div>     
       </div>
+      <div class="vertical-spacer"></div>
     </div>
   </div>
 </div>
 
 <!-- ARC -->
 <div class="container-md">
-  <div class="row hero bg-lightblue">
+  <div class="row hero bg-split-top-lightblue">
     <div class="hero-image">
+      <div class="vertical-spacer"></div>
       <img src="assets/img/arc-overview.svg" alt="overview of annotated research contexts"/>
     </div>
     <div class="hero-content">
@@ -96,14 +100,16 @@ title: Home
           <!-- <a href="/arcs.html" class="learn-more">learn more</a> -->
         </div>      
       </div>
+      <div class="vertical-spacer"></div>
      </div>
   </div>
 </div>
 
 <!-- Service -->
 <div class="container-md">
-  <div class="row hero bg-lightgray">
+  <div class="row hero bg-split-top-olive">
     <div class="hero-image order-1 order-md-2">
+      <div class="vertical-spacer"></div>
       <img class="col-bg" src="assets/img/service.svg" alt="services provided by DataPLANT"/>
     </div>
     <div class="hero-content order-2 order-md-1">
@@ -122,6 +128,7 @@ title: Home
           <!-- <a href="/services.html" class="learn-more">learn more</a> -->
         </div>      
       </div>
+      <div class="vertical-spacer"></div>
     </div>
   </div>
 </div>
