--- a/arcs.html
+++ b/arcs.html
@@ -111,7 +111,6 @@ layout: default
     <div class="row hero rounded bg-mint-lighter border-mint-dark">
       <div class="col-md-12">
         <h4><strong>ARC Ecosystem</strong></h4>
-
         <div class="row">
           <div class="col-md-6">
             <img class="img-fluid mx-md-5 my-4" alt="ARC research cycle" src="/assets/img/arc-ecosystem.svg" />
@@ -128,3 +127,4 @@ layout: default
       </div>
     </div>
   </div>
+</div>
