--- a/index.html
+++ b/index.html
@@ -5,170 +5,180 @@ title: Home
 
 <!--- Jobs ALERT -->
 <div class="container-md">
-  <div class="row justify-content-md-center bg-white">
-    <div class="col-12 mt-4 p-4">
-    <div class="alert alert-success text-center text-white bg-mint" role="alert">
-       <h2>The <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"> <b>‘Call for ARCs’</b> </a> starts now.</h2> Take our six-minute survey and be among first research group visited by DataPLANT’s data stewards.
-    </br>
-       <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u" class="learn-more">go to survey</a>
+  <div class="row justify-content-md-center pb5 bg-white">
+    <div class="col-12 mt-4 p-0 pt-3">
+      <div class="alert alert-success text-center text-white bg-mint" role="alert">
+        <h2>The <a
+            href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u">
+            <b>‘Call for ARCs’</b> </a> starts now.</h2> Take our six-minute survey and be among first research group
+        visited by DataPLANT’s data stewards.
+        </br>
+        <a href="https://forms.office.com/Pages/ResponsePage.aspx?id=DQSIkWdsW0yxEjajBLZtrQAAAAAAAAAAAAMAALOGc-tUQjEyTlpWM0pDMk9JWDQwNzlJQVpUTDg1RC4u"
+          class="learn-more">go to survey</a>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Title -->
-<div class="container-md pb-3 bg-white">
-  <div class="row justify-content-center bg-white">
-    <div class="col-12 col-md-9 pb-5 pb-lg-0 bg-white">
-      <img src="assets/img/nfdi-hero_.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;"/>
+
+<div class="container-md p-0 pt-5 bg-white">
+  <!-- Title -->
+
+  <div class="row justify-content-center">
+    <div class="col-12 col-md-9 pb-5 pb-lg-0">
+      <img src="assets/img/nfdi-hero_.svg" alt="NFDI stylized overview" style="width: 100%; margin-bottom: -3rem;" />
     </div>
   </div>
 
-  <div class="row justify-content-center">
+  <div class="row justify-content-center pb-5">
     <div class="col text-center text-darkblue pb-2">
       <h2><b>Democratization of plant research.</b></h2>
       <h2><b>Made easy.</b></h2>
-    </br>
-    <!-- <a href="https://swate.bio.uni-kl.de/register" class="learn-more">become a member</a>   -->
-  </div>
-</div>
-
-<!-- Our Mission -->
-<div class="container-md">
-  <div class="row hero bg-split-top-mint">
-    <div class="hero-image">
-      <div class="vertical-spacer"></div>
-      <img src="assets/img/mission.svg" alt="mission statement"/>
-    </div>
-    <div class="hero-content">
-      <div class="card bg-white">
-        <div class="card-body">
-          <h5 class="card-title text-mint upcase">Mission</h5>
-          <h2 class="card-title">Driving the digital change in plant science</h2>
-          <p class="card-text">DataPLANT’s mission is to provide a sustainable and well annotated data management 
-            platform for plant sciences. DataPLANT will path pave the way from classical paper publication to pure 
-            data publication including the annotated research context</p>
-          <a href="/mission.html" class="learn-more">learn more</a>
-        </div>      
-      </div>
-      <div class="vertical-spacer"></div>
-  </div>
-</div>
-
-<!-- Community -->
-<div class="container-md">
-  <div class="row hero bg-split-top-darkblue">
-    <div class="hero-image order-1 order-md-2">
-      <div class="vertical-spacer"></div>
-      <img src="assets/img/funding-map.svg" alt="plant biology funding map"/>
-    </div>
-    <div class="hero-content order-2 order-md-1">
-      <div class="card bg-white">
-        <div class="card-body">
-          <h5 class="text-darkblue card-title upcase">Our Community</h5>
-          <h2 class="card-title">Fundamental research in plant science</h2>
-          <p class="card-text">DataPlant is primarily geared towards the needs of fundamental plant research 
-            (e.g. those represented by the DFG categories 202-[01 evolution  and systematics of plants and animals, 
-            04 plant physiology, 05 plant biochemistry and biophysics, 06 plant cell and developmental biology, 
-            07 plant genetics]. As such DataPlant is especially adapter to large scale data sets be it omics science 
-            or imaging and is ready to store petabaytes of annotated data.            
-          </p>
-          <a href="/community.html" class="learn-more">learn more</a>
-        </div>     
-      </div>
-      <div class="vertical-spacer"></div>
+      </br>
+      <!-- <a href="https://swate.bio.uni-kl.de/register" class="learn-more">become a member</a>   -->
     </div>
   </div>
-</div>
 
-<!-- ARC -->
-<div class="container-md">
-  <div class="row hero bg-split-top-lightblue">
-    <div class="hero-image">
-      <div class="vertical-spacer"></div>
-      <img src="assets/img/arc-overview.svg" alt="overview of annotated research contexts"/>
-    </div>
-    <div class="hero-content">
-      <div class="card bg-white">
-        <div class="card-body">
-          <h5 class="text-lightblue card-title upcase">Annotated Research Context</h5>
-          <h2 class="card-title">Understanding ARC concept</h2>
-          <p class="card-text">DataPlant will allow users to store their data in form of an annotated 
-            research context. This includes not only the measurement data, but also (meta)data annotations, 
-            tools, and scripts. This will allow reproducibility plus to forward “raw data” and metadata 
-            slices to public repositories (e.g. EBI NCBI etc.)</p>
-          <!-- <a href="/arcs.html" class="learn-more">learn more</a> -->
-        </div>      
-      </div>
-      <div class="vertical-spacer"></div>
-     </div>
-  </div>
-</div>
-
-<!-- Service -->
-<div class="container-md">
-  <div class="row hero bg-split-top-olive">
-    <div class="hero-image order-1 order-md-2">
-      <div class="vertical-spacer"></div>
-      <img class="col-bg" src="assets/img/service.svg" alt="services provided by DataPLANT"/>
-    </div>
-    <div class="hero-content order-2 order-md-1">
-      <div class="card bg-white">
-        <div class="card-body">
-          <h5 class="card-title upcase">Service</h5>
-          <h2 class="card-title">Building infrastructure and service landscape</h2>
-          <p class="card-text">DataPLANT’s mission is service standing on the shoulders of giants. 
-            As such it relies on existing IT infrastructure and builds user-oriented services. 
-            DataPLANT wants to break the paradigm of  “we are a --- mandated provider so you have 
-            to live with our tools where even IT experts get gray hair when submitting data” to 
-            “we understand that annotating data and providing metadata takes precious and we are 
-            in it together so let’s make this as easy as possible”.
-          </p>
-        </br>
-          <!-- <a href="/services.html" class="learn-more">learn more</a> -->
-        </div>      
-      </div>
-      <div class="vertical-spacer"></div>
-    </div>
-  </div>
-</div>
-
-<!--- News -->
-
-<div class="container-md">
-  <div class="row hero bg-yellow">
-
-    <div class="col-md-12">
-      <h3 class="upcase">News</h3>
-    </div>
-
-    {% assign news_items = site.news | sort: 'date' | reverse %}
-    {% for item in news_items limit:4 %}
-    <div class="news-item">
-      <div class="row">
-        <div class="col-2">
-          <h2>{{ item.date | date: '%-d' }}</h2>
-          <h4>{{ item.date | date: '%b' }}</h4>
+  <div class="container-md px-5 pt-2 bg-darkgray">
+    <!-- Our Mission -->
+    <div class="container-md">
+      <div class="row hero bg-split-top-mint">
+        <div class="hero-image">
+          <div class="vertical-spacer"></div>
+          <img src="assets/img/mission/mission_main.svg" alt="mission statement" />
         </div>
-        <div class="col-10">
-          <a href="{{ item.url }}"><h6>{{ item.title }}</h6></a>
-          <p>{{ item.content | strip_html | truncatewords:50 }}</p>
-          <a class="btn-sm btn-secondary" href="{{ item.url }}">read more</a>
+        <div class="hero-content">
+          <div class="card bg-white">
+            <div class="card-body">
+              <h5 class="card-title text-mint upcase">Mission</h5>
+              <h2 class="card-title">Driving the digital change in plant science</h2>
+              <p class="card-text">DataPLANT’s mission is to provide a sustainable and well annotated data management
+                platform for plant sciences. DataPLANT will path pave the way from classical paper publication to pure
+                data publication including the annotated research context</p>
+              <a href="/mission.html" class="learn-more">learn more</a>
+            </div>
+          </div>
+          <div class="vertical-spacer"></div>
         </div>
       </div>
     </div>
-    {% endfor %}
 
-    <div class="col-12" style="text-align: center;">
-      <a href="/news.html" class="learn-more">more news</a>
+    <!-- Community -->
+    <div class="container-md">
+      <div class="row hero bg-split-top-darkblue">
+        <div class="hero-image order-1 order-md-2">
+          <div class="vertical-spacer"></div>
+          <img src="assets/img/funding-map.svg" alt="plant biology funding map" />
+        </div>
+        <div class="hero-content order-2 order-md-1">
+          <div class="card bg-white">
+            <div class="card-body">
+              <h5 class="text-darkblue card-title upcase">Our Community</h5>
+              <h2 class="card-title">Fundamental research in plant science</h2>
+              <p class="card-text">DataPlant is primarily geared towards the needs of fundamental plant research
+                (e.g. those represented by the DFG categories 202-[01 evolution and systematics of plants and animals,
+                04 plant physiology, 05 plant biochemistry and biophysics, 06 plant cell and developmental biology,
+                07 plant genetics]. As such DataPlant is especially adapter to large scale data sets be it omics science
+                or imaging and is ready to store petabaytes of annotated data.
+              </p>
+              <a href="/community.html" class="learn-more">learn more</a>
+            </div>
+          </div>
+          <div class="vertical-spacer"></div>
+        </div>
+      </div>
     </div>
-    
+
+    <!-- ARC -->
+    <div class="container-md">
+      <div class="row hero bg-split-top-lightblue">
+        <div class="hero-image">
+          <div class="vertical-spacer"></div>
+          <img src="assets/img/arc/arc_main.svg" alt="overview of annotated research contexts" />
+        </div>
+        <div class="hero-content">
+          <div class="card bg-white">
+            <div class="card-body">
+              <h5 class="text-lightblue card-title upcase">Annotated Research Context</h5>
+              <h2 class="card-title">Understanding ARC concept</h2>
+              <p class="card-text">DataPlant will allow users to store their data in form of an annotated
+                research context. This includes not only the measurement data, but also (meta)data annotations,
+                tools, and scripts. This will allow reproducibility plus to forward “raw data” and metadata
+                slices to public repositories (e.g. EBI NCBI etc.)</p>
+              <!-- <a href="/arcs.html" class="learn-more">learn more</a> -->
+            </div>
+          </div>
+          <div class="vertical-spacer"></div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Service -->
+    <div class="container-md">
+      <div class="row hero bg-split-top-olive">
+        <div class="hero-image order-1 order-md-2">
+          <div class="vertical-spacer"></div>
+          <img class="col-bg" src="assets/img/service/service_main.svg" alt="services provided by DataPLANT" />
+        </div>
+        <div class="hero-content order-2 order-md-1">
+          <div class="card bg-white">
+            <div class="card-body">
+              <h5 class="card-title upcase">Service</h5>
+              <h2 class="card-title">Building infrastructure and service landscape</h2>
+              <p class="card-text">DataPLANT’s mission is service standing on the shoulders of giants.
+                As such it relies on existing IT infrastructure and builds user-oriented services.
+                DataPLANT wants to break the paradigm of “we are a --- mandated provider so you have
+                to live with our tools where even IT experts get gray hair when submitting data” to
+                “we understand that annotating data and providing metadata takes precious and we are
+                in it together so let’s make this as easy as possible”.
+              </p>
+              </br>
+              <!-- <a href="/services.html" class="learn-more">learn more</a> -->
+            </div>
+          </div>
+          <div class="vertical-spacer"></div>
+        </div>
+      </div>
+    </div>
+
+    <!--- News -->
+
+    <div class="container-md pb-1">
+      <div class="row hero bg-yellow">
+
+        <div class="col-md-12">
+          <h3 class="upcase">News</h3>
+        </div>
+
+        {% assign news_items = site.news | sort: 'date' | reverse %}
+        {% for item in news_items limit:4 %}
+        <div class="news-item">
+          <div class="row">
+            <div class="col-2">
+              <h2>{{ item.date | date: '%-d' }}</h2>
+              <h4>{{ item.date | date: '%b' }}</h4>
+            </div>
+            <div class="col-10">
+              <a href="{{ item.url }}">
+                <h6>{{ item.title }}</h6>
+              </a>
+              <p>{{ item.content | strip_html | truncatewords:50 }}</p>
+              <a class="btn-sm btn-secondary" href="{{ item.url }}">read more</a>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+
+        <div class="col-12" style="text-align: center;">
+          <a href="/news.html" class="learn-more">more news</a>
+        </div>
+
+      </div>
+    </div>
   </div>
-</div>
+  <!--- Jobs -->
 
-<!--- Jobs -->
-
-<!-- <div class="container-md ">
+  <!-- <div class="container-md ">
   <h3>JOBS</h3>
   <div class="row">
     <div class="jobs">
