--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@ layout: default
 title: Home
 ---
 
+<div class="bg-lightblue">
+
 <!--- Jobs ALERT -->
 <div class="container-md">
   <div class="row justify-content-md-center pb5 bg-white">
@@ -176,6 +178,7 @@ title: Home
       </div>
     </div>
   </div>
+</div>
   <!--- Jobs -->
 
   <!-- <div class="container-md ">
