--- a/arcs.html
+++ b/arcs.html
@@ -17,8 +17,8 @@ layout: default
 <div class="container-fluid">
   <div class="container pb-3">
     <div class="row bg-white rounded align-items-center py-3">
-      <div class="col-md-6 col-12 offset-md-1 order-2 order-md-1">
-        <h4 style="line-height: 150%;"><strong>
+      <div class="col-md-6 col-12 offset-md-0 order-2 order-md-1">
+        <h1 style="line-height: 150%;"><strong>
             ARCs build a generic interface for
             F<sub class="text-muted">indable</sub>
             A<sub class="text-muted">accessible</sub>
@@ -26,8 +26,9 @@ layout: default
             R<sub class="text-muted">eusable</sub>
             compute, storage, sharing and publication.
           </strong>
-        </h4>
+        </h1>
       </div>
+      <!-- <a href="/mission.html" class="learn-more">learn more</a> -->
       <div class="col-md-3 col-6 offset-3 offset-md-0 order-1 order-md-2">
         <img src="assets/img/arc.svg" alt="ARC symbol" />
       </div>
